Polished src/download.py (previously src/prep.py)

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -141,6 +141,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'metadata'}\n",
+      "Skipped downloading 'data/birds.zip' as it already exists. Use the '--overwrite' flag to force redownload.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python src/download.py birds --metadata --models --raw --"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
