Separated cfg files of different datasets

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -2,141 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019/07/01 18:38:27 INFO mlflow.projects: === Creating conda environment mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f ===\n",
-      "Collecting package metadata (repodata.json): done\n",
-      "Solving environment: done\n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n",
-      "#\n",
-      "# To activate this environment, use\n",
-      "#\n",
-      "#     $ conda activate mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f\n",
-      "#\n",
-      "# To deactivate an active environment, use\n",
-      "#\n",
-      "#     $ conda deactivate\n",
-      "\n",
-      "2019/07/01 18:39:17 INFO mlflow.projects: === Created directory /tmp/tmpwz6hhiu_ for downloading remote URIs passed to arguments of type 'path' ===\n",
-      "2019/07/01 18:39:17 INFO mlflow.projects: === Running command 'source activate mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f && python src/pretrain_DAMSM.py \n",
-      "  --cfg ../cfg/DAMSM/bird.yml \\\n",
-      "  --gpu 0\n",
-      "python src/main.py \n",
-      "  --cfg ../cfg/bird_attn2.yml \\\n",
-      "  --gpu 0\n",
-      "' in run with ID 'e6971680253a40b1933b38a83ee61ecd' === \n",
-      "/home/mlaradji/projects/Produvia/AI-Platform/AttnGAN/src/miscc/config.py:103: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  yaml_cfg = edict(yaml.load(f))\n",
-      "Using config:\n",
-      "{'B_VALIDATION': False,\n",
-      " 'CONFIG_NAME': 'DAMSM',\n",
-      " 'CUDA': True,\n",
-      " 'DATASET_NAME': 'birds',\n",
-      " 'DATA_DIR': '../data/birds',\n",
-      " 'GAN': {'B_ATTENTION': True,\n",
-      "         'B_DCGAN': False,\n",
-      "         'CONDITION_DIM': 100,\n",
-      "         'DF_DIM': 64,\n",
-      "         'GF_DIM': 128,\n",
-      "         'R_NUM': 2,\n",
-      "         'Z_DIM': 100},\n",
-      " 'GPU_ID': 0,\n",
-      " 'RNN_TYPE': 'LSTM',\n",
-      " 'TEXT': {'CAPTIONS_PER_IMAGE': 10, 'EMBEDDING_DIM': 256, 'WORDS_NUM': 18},\n",
-      " 'TRAIN': {'BATCH_SIZE': 48,\n",
-      "           'B_NET_D': True,\n",
-      "           'DISCRIMINATOR_LR': 0.0002,\n",
-      "           'ENCODER_LR': 0.002,\n",
-      "           'FLAG': True,\n",
-      "           'GENERATOR_LR': 0.0002,\n",
-      "           'MAX_EPOCH': 600,\n",
-      "           'NET_E': '',\n",
-      "           'NET_G': '',\n",
-      "           'RNN_GRAD_CLIP': 0.25,\n",
-      "           'SMOOTH': {'GAMMA1': 4.0,\n",
-      "                      'GAMMA2': 5.0,\n",
-      "                      'GAMMA3': 10.0,\n",
-      "                      'LAMBDA': 1.0},\n",
-      "           'SNAPSHOT_INTERVAL': 50},\n",
-      " 'TREE': {'BASE_SIZE': 299, 'BRANCH_NUM': 1},\n",
-      " 'WORKERS': 1}\n",
-      "THCudaCheck FAIL file=/opt/conda/conda-bld/pytorch_1556653114079/work/torch/csrc/cuda/Module.cpp line=33 error=30 : unknown error\n",
-      "Traceback (most recent call last):\n",
-      "  File \"src/pretrain_DAMSM.py\", line 231, in <module>\n",
-      "    torch.cuda.set_device(cfg.GPU_ID)\n",
-      "  File \"/home/mlaradji/.conda/envs/mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f/lib/python3.7/site-packages/torch/cuda/__init__.py\", line 265, in set_device\n",
-      "    torch._C._cuda_setDevice(device)\n",
-      "RuntimeError: cuda runtime error (30) : unknown error at /opt/conda/conda-bld/pytorch_1556653114079/work/torch/csrc/cuda/Module.cpp:33\n",
-      "bash: line 1: --cfg: command not found\n",
-      "/home/mlaradji/projects/Produvia/AI-Platform/AttnGAN/src/miscc/config.py:103: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  yaml_cfg = edict(yaml.load(f))\n",
-      "Using config:\n",
-      "{'B_VALIDATION': False,\n",
-      " 'CONFIG_NAME': 'attn2',\n",
-      " 'CUDA': False,\n",
-      " 'DATASET_NAME': 'birds',\n",
-      " 'DATA_DIR': '../data/birds',\n",
-      " 'GAN': {'B_ATTENTION': True,\n",
-      "         'B_DCGAN': False,\n",
-      "         'CONDITION_DIM': 100,\n",
-      "         'DF_DIM': 64,\n",
-      "         'GF_DIM': 32,\n",
-      "         'R_NUM': 2,\n",
-      "         'Z_DIM': 100},\n",
-      " 'GPU_ID': 0,\n",
-      " 'RNN_TYPE': 'LSTM',\n",
-      " 'TEXT': {'CAPTIONS_PER_IMAGE': 10, 'EMBEDDING_DIM': 256, 'WORDS_NUM': 18},\n",
-      " 'TRAIN': {'BATCH_SIZE': 20,\n",
-      "           'B_NET_D': True,\n",
-      "           'DISCRIMINATOR_LR': 0.0002,\n",
-      "           'ENCODER_LR': 0.0002,\n",
-      "           'FLAG': True,\n",
-      "           'GENERATOR_LR': 0.0002,\n",
-      "           'MAX_EPOCH': 600,\n",
-      "           'NET_E': '../DAMSMencoders/bird/text_encoder200.pth',\n",
-      "           'NET_G': '',\n",
-      "           'RNN_GRAD_CLIP': 0.25,\n",
-      "           'SMOOTH': {'GAMMA1': 4.0,\n",
-      "                      'GAMMA2': 5.0,\n",
-      "                      'GAMMA3': 10.0,\n",
-      "                      'LAMBDA': 5.0},\n",
-      "           'SNAPSHOT_INTERVAL': 50},\n",
-      " 'TREE': {'BASE_SIZE': 64, 'BRANCH_NUM': 3},\n",
-      " 'WORKERS': 4}\n",
-      "Traceback (most recent call last):\n",
-      "  File \"src/main.py\", line 129, in <module>\n",
-      "    transform=image_transform)\n",
-      "  File \"/home/mlaradji/projects/Produvia/AI-Platform/AttnGAN/src/datasets.py\", line 110, in __init__\n",
-      "    self.bbox = self.load_bbox()\n",
-      "  File \"/home/mlaradji/projects/Produvia/AI-Platform/AttnGAN/src/datasets.py\", line 126, in load_bbox\n",
-      "    header=None).astype(int)\n",
-      "  File \"/home/mlaradji/.conda/envs/mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f/lib/python3.7/site-packages/pandas/io/parsers.py\", line 702, in parser_f\n",
-      "    return _read(filepath_or_buffer, kwds)\n",
-      "  File \"/home/mlaradji/.conda/envs/mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f/lib/python3.7/site-packages/pandas/io/parsers.py\", line 429, in _read\n",
-      "    parser = TextFileReader(filepath_or_buffer, **kwds)\n",
-      "  File \"/home/mlaradji/.conda/envs/mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f/lib/python3.7/site-packages/pandas/io/parsers.py\", line 895, in __init__\n",
-      "    self._make_engine(self.engine)\n",
-      "  File \"/home/mlaradji/.conda/envs/mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f/lib/python3.7/site-packages/pandas/io/parsers.py\", line 1122, in _make_engine\n",
-      "    self._engine = CParserWrapper(self.f, **self.options)\n",
-      "  File \"/home/mlaradji/.conda/envs/mlflow-be993d3e5dc815ae71b806d80af84158bb185a5f/lib/python3.7/site-packages/pandas/io/parsers.py\", line 1853, in __init__\n",
-      "    self._reader = parsers.TextReader(src, **kwds)\n",
-      "  File \"pandas/_libs/parsers.pyx\", line 387, in pandas._libs.parsers.TextReader.__cinit__\n",
-      "  File \"pandas/_libs/parsers.pyx\", line 705, in pandas._libs.parsers.TextReader._setup_parser_source\n",
-      "FileNotFoundError: [Errno 2] File b'../data/birds/CUB_200_2011/bounding_boxes.txt' does not exist: b'../data/birds/CUB_200_2011/bounding_boxes.txt'\n",
-      "bash: line 4: --cfg: command not found\n",
-      "2019/07/01 18:39:23 ERROR mlflow.cli: === Run (ID 'e6971680253a40b1933b38a83ee61ecd') failed ===\n"
+      "2019/07/01 20:32:50 INFO mlflow.projects: === Created directory /tmp/tmpgax3ztyn for downloading remote URIs passed to arguments of type 'path' ===\n",
+      "2019/07/01 20:32:50 INFO mlflow.projects: === Running command 'source activate mlflow-697830836e46982e343d4e3caec0e2856607f468 && python src/download.py birds --all' in run with ID '9c76702600e54cc18a009f6bc8b6a4d1' === \n",
+      "{'raw', 'metadata', 'models', 'damsme'}\n",
+      "Skipped downloading 'data/birds.zip' as it already exists. Use the '--overwrite' flag to force redownload.\n",
+      "Skipped downloading 'DAMSMencoders/bird.zip' as it already exists. Use the '--overwrite' flag to force redownload.\n",
+      "Skipped downloading 'models/bird_AttnGAN2.pth' as it already exists. Use the '--overwrite' flag to force redownload.\n",
+      "Skipped downloading 'models/bird_AttnDCGAN2.pth' as it already exists. Use the '--overwrite' flag to force redownload.\n",
+      "Skipped downloading 'data/CUB_200_2011.tgz' as it already exists. Use the '--overwrite' flag to force redownload.\n",
+      "2019/07/01 20:32:50 INFO mlflow.projects: === Run (ID '9c76702600e54cc18a009f6bc8b6a4d1') succeeded ===\n"
      ]
     }
    ],
    "source": [
-    "!mlflow run ."
+    "!mlflow run . -e download -P dataset=birds"
    ]
   },
   {
